--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "apollo-client": "^2.4.1",
     "apollo-link-http": "^1.5.4",
     "apollo-server-express": "^2.0.6",
+    "apollo-upload-client": "^8.1.0",
+    "apollo-upload-server": "^7.1.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -42,6 +44,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "merge-graphql-schemas": "^1.5.3",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.13",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -52,6 +55,7 @@
     "react-apollo": "^2.1.11",
     "react-contexify": "^3.0.3",
     "react-contextmenu": "^2.9.3",
+    "react-datepicker": "^1.6.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
     "react-icons": "^3.0.5",
