--- a/package.json
+++ b/package.json
@@ -117,5 +117,8 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines" : {
+    "node": "7.9.0"
+  },
   "proxy": "http://localhost:4000"
 }
